docs: лог сессии 2026-06-01